# azure-artifacts-python-helloworld

./: .dockerignore  .gitignore  .pypirc  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: build-and-publish.yml  test.yml
app/: hello.py
