[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "azurehello"
dynamic = ["version"]
description = "Basic Python Hello World package published to Azure Artifacts"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Atul J. Kamble", email = "atul_kamble@hotmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/atulkamble/azure-artifacts-python-helloworld"
"Bug Reports" = "https://github.com/atulkamble/azure-artifacts-python-helloworld/issues"
"Source" = "https://github.com/atulkamble/azure-artifacts-python-helloworld"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
version = {attr = "setup.get_version"}